try to fixed the issues with the click to mve to another page

--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "jspdf": "^2.5.2",
     "next": "^15.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "^18.0.0",
     "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
